// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> component renders with DARK theme 1`] = `
.c5 {
  background-color: #222222;
  border: 1px solid #484848;
  border-radius: 50%;
  color: #888888;
  cursor: pointer;
  height: 2.5rem;
  margin: 0 0 0 1rem;
  outline: 0;
  width: 2.5rem;
}

.c5:hover {
  background-color: #484848;
}

.c5:hover svg,
.c5:hover g {
  fill: #ffffff;
}

.c5.active {
  background-color: #e22a23;
  border-color: #e22a23;
}

.c5.active svg,
.c5.active g {
  fill: #ffffff;
}

.c5.light {
  background-color: #ffffff;
  border-color: #c4c4c4;
}

.c5.light svg,
.c5.light g {
  fill: #707070;
}

.c5.light:hover svg,
.c5.light:hover g {
  fill: #707070;
}

.c6 {
  font-family: 'Karla',sans-serif;
  padding: 1.5rem;
  border-radius: 4px;
  background: #282828;
  font-size: 1.75rem;
  margin: 1rem 0 0;
  text-align: center;
  width: 100%;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  margin-top: 1rem;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 {
  border-bottom: 1px solid transparent;
  color: #888888;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  margin: 0.5rem 2rem 0 0;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  border-bottom: 1px solid #f5f5f5;
  color: #f5f5f5;
}

.c2 {
  border-bottom: 1px solid transparent;
  color: #888888;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  margin: 0.5rem 2rem 0 0;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #f5f5f5;
}

@media (min-width:769px) {
  .c0 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

<div>
  <header
    className="c0"
  >
    <div
      className="c1"
    >
      <span
        className="c2"
      >
        Game
      </span>
      <a
        className="c3"
        href="/about"
        onClick={[Function]}
      >
        About
      </a>
    </div>
    <div
      className="c4"
    >
      <button
        className="c5"
        onClick={[Function]}
      >
        <svg
          fill="#707070"
          height="100%"
          viewBox="0 0 24 23"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <g
            transform="translate(0.000000,400.000000) scale(0.100000,-0.100000)"
          >
            <path
              d="M105,3929.3c-7.3-1.7-14.5-7.3-17.8-13.8c-1.9-3.8-2-4.7-2-12.2c0-7.3,0.2-8.5,1.8-12.1c3.8-8,10.3-13,26-19.7 c5.3-2.3,9.8-4.8,11.6-6.3c2.8-2.5,2.9-2.8,2.9-6.5c0-3.4-0.3-4.2-2-6.1c-2.6-2.7-5.8-3.7-11.4-3.7c-7.1,0.1-12.5,3-17.3,9.4 l-1.8,2.5l-7.8-4.5c-4.2-2.5-8-4.6-8.4-4.7c-1.1-0.4,3.8-7.3,7.8-11.1c11.4-10.3,32.9-13.1,46.8-6c11.7,5.9,17.2,18.8,13.8,32.1 c-2.8,10.6-9.3,16.4-27.6,24.3c-12.9,5.6-16,8.7-14.9,14.7c1.6,8.3,14.4,9,19.8,1.1c1.1-1.6,2.2-2.7,2.5-2.6c0.2,0.1,3.8,2.4,8,5.1 l7.5,4.8l-1.3,2.1c-2.1,3.3-7.2,8.2-10.3,10.1c-1.6,0.9-4.8,2.2-7.1,2.7C119.4,3930.2,109.3,3930.4,105,3929.3z"
            />
            <path
              d="M5,3880.7v-48.6h33.2h33.2v8.8v8.8H48.4H25.5v11.6v11.6h19.4h19.5l-0.2,8.7l-0.2,8.6l-19.2,0.2l-19.3,0.1v10.2v10.2h21.9 h21.9v9.2v9.2H37.1H5V3880.7z"
            />
            <path
              d="M181.5,3910.2c-7.9-10.6-15.6-21.3-17.1-23.8c-5.3-8.7-7.4-16.7-6.8-25.7c0.9-13.9,11.9-25.7,27.7-29.7 c5.4-1.4,17.1-1.3,22.6,0c6.8,1.8,12.8,4.9,17.2,9.2c6.8,6.4,9.9,14.2,9.9,24c0,12.7-6.3,22.8-17.4,28.1c-4.2,1.9-5.6,2.2-12.6,2.5 c-4.9,0.2-8.8,0-10.2-0.5c-2.1-0.7-2.1-0.6,1.1,2.1c2.5,2.3,22.9,28,25.4,32.2c0.4,0.6-2.3,0.8-12.4,0.8h-13L181.5,3910.2z M204,3876.5c5.6-2.9,8.7-9.9,7.1-16c-1.8-7-7.3-11.1-15-11.1c-11.3-0.1-18.6,11.4-13.5,21.1c2,3.8,3.7,5.3,8.1,6.8 C195.1,3878.9,199.9,3878.6,204,3876.5z"
            />
          </g>
        </svg>
      </button>
      <button
        className="c5"
        onClick={[Function]}
      >
        <svg
          fill="#707070"
          height="100%"
          viewBox="0 0 24 23"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M6.76 4.84l-1.8-1.79-1.41 1.41 1.79 1.79zM1 10.5h3v2H1zM11 .55h2V3.5h-2zm8.04 2.495l1.408 1.407-1.79 1.79-1.407-1.408zm-1.8 15.115l1.79 1.8 1.41-1.41-1.8-1.79zM20 10.5h3v2h-3zm-8-5c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6zm0 10c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4zm-1 4h2v2.95h-2zm-7.45-.96l1.41 1.41 1.79-1.8-1.41-1.41z"
          />
        </svg>
      </button>
    </div>
    <h1
      className="c6"
    >
      JavaScript Design Patterns
    </h1>
  </header>
</div>
`;

exports[`<Header /> component renders with LIGHT theme 1`] = `
.c5 {
  background-color: #f4f4f4;
  border: 1px solid #e8e8e8;
  border-radius: 50%;
  color: #e22a23;
  cursor: pointer;
  height: 2.5rem;
  margin: 0 0 0 1rem;
  outline: 0;
  width: 2.5rem;
}

.c5:hover {
  background-color: #e8e8e8;
}

.c5:hover svg,
.c5:hover g {
  fill: #ffffff;
}

.c5.active {
  background-color: #e22a23;
  border-color: #e22a23;
}

.c5.active svg,
.c5.active g {
  fill: #ffffff;
}

.c5.light {
  background-color: #ffffff;
  border-color: #aaaaaa;
}

.c5.light svg,
.c5.light g {
  fill: #cccccc;
}

.c5.light:hover svg,
.c5.light:hover g {
  fill: #cccccc;
}

.c6 {
  font-family: 'Karla',sans-serif;
  padding: 1.5rem;
  border-radius: 4px;
  background: #ededed;
  font-size: 1.75rem;
  margin: 1rem 0 0;
  text-align: center;
  width: 100%;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  margin-top: 1rem;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 {
  border-bottom: 1px solid transparent;
  color: #e22a23;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  margin: 0.5rem 2rem 0 0;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  border-bottom: 1px solid #707070;
  color: #707070;
}

.c2 {
  border-bottom: 1px solid transparent;
  color: #e22a23;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.875rem;
  margin: 0.5rem 2rem 0 0;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #707070;
}

@media (min-width:769px) {
  .c0 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

<div>
  <header
    className="c0"
  >
    <div
      className="c1"
    >
      <span
        className="c2"
      >
        Game
      </span>
      <a
        className="c3"
        href="/about"
        onClick={[Function]}
      >
        About
      </a>
    </div>
    <div
      className="c4"
    >
      <button
        className="c5"
        onClick={[Function]}
      >
        <svg
          fill="#707070"
          height="100%"
          viewBox="0 0 24 23"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <g
            transform="translate(0.000000,400.000000) scale(0.100000,-0.100000)"
          >
            <path
              d="M105,3929.3c-7.3-1.7-14.5-7.3-17.8-13.8c-1.9-3.8-2-4.7-2-12.2c0-7.3,0.2-8.5,1.8-12.1c3.8-8,10.3-13,26-19.7 c5.3-2.3,9.8-4.8,11.6-6.3c2.8-2.5,2.9-2.8,2.9-6.5c0-3.4-0.3-4.2-2-6.1c-2.6-2.7-5.8-3.7-11.4-3.7c-7.1,0.1-12.5,3-17.3,9.4 l-1.8,2.5l-7.8-4.5c-4.2-2.5-8-4.6-8.4-4.7c-1.1-0.4,3.8-7.3,7.8-11.1c11.4-10.3,32.9-13.1,46.8-6c11.7,5.9,17.2,18.8,13.8,32.1 c-2.8,10.6-9.3,16.4-27.6,24.3c-12.9,5.6-16,8.7-14.9,14.7c1.6,8.3,14.4,9,19.8,1.1c1.1-1.6,2.2-2.7,2.5-2.6c0.2,0.1,3.8,2.4,8,5.1 l7.5,4.8l-1.3,2.1c-2.1,3.3-7.2,8.2-10.3,10.1c-1.6,0.9-4.8,2.2-7.1,2.7C119.4,3930.2,109.3,3930.4,105,3929.3z"
            />
            <path
              d="M5,3880.7v-48.6h33.2h33.2v8.8v8.8H48.4H25.5v11.6v11.6h19.4h19.5l-0.2,8.7l-0.2,8.6l-19.2,0.2l-19.3,0.1v10.2v10.2h21.9 h21.9v9.2v9.2H37.1H5V3880.7z"
            />
            <path
              d="M181.5,3910.2c-7.9-10.6-15.6-21.3-17.1-23.8c-5.3-8.7-7.4-16.7-6.8-25.7c0.9-13.9,11.9-25.7,27.7-29.7 c5.4-1.4,17.1-1.3,22.6,0c6.8,1.8,12.8,4.9,17.2,9.2c6.8,6.4,9.9,14.2,9.9,24c0,12.7-6.3,22.8-17.4,28.1c-4.2,1.9-5.6,2.2-12.6,2.5 c-4.9,0.2-8.8,0-10.2-0.5c-2.1-0.7-2.1-0.6,1.1,2.1c2.5,2.3,22.9,28,25.4,32.2c0.4,0.6-2.3,0.8-12.4,0.8h-13L181.5,3910.2z M204,3876.5c5.6-2.9,8.7-9.9,7.1-16c-1.8-7-7.3-11.1-15-11.1c-11.3-0.1-18.6,11.4-13.5,21.1c2,3.8,3.7,5.3,8.1,6.8 C195.1,3878.9,199.9,3878.6,204,3876.5z"
            />
          </g>
        </svg>
      </button>
      <button
        className="c5"
        onClick={[Function]}
      >
        <svg
          fill="#707070"
          height="100%"
          viewBox="0 0 24 23"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M6.76 4.84l-1.8-1.79-1.41 1.41 1.79 1.79zM1 10.5h3v2H1zM11 .55h2V3.5h-2zm8.04 2.495l1.408 1.407-1.79 1.79-1.407-1.408zm-1.8 15.115l1.79 1.8 1.41-1.41-1.8-1.79zM20 10.5h3v2h-3zm-8-5c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6zm0 10c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4zm-1 4h2v2.95h-2zm-7.45-.96l1.41 1.41 1.79-1.8-1.41-1.41z"
          />
        </svg>
      </button>
    </div>
    <h1
      className="c6"
    >
      JavaScript Design Patterns
    </h1>
  </header>
</div>
`;
